--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ body {
   color: #001f3f;
   margin: 0;
   overflow: hidden;
+  background-image: url("../img/image.jpg");
+  background-size: cover;
+  background-repeat: repeat;
 }
 .container {
   display: flex;
